@@ -1,3 +1,11 @@
+2008-05-08  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Ben LeMasurier <ben.lemasurier@gmail.com>
+
+	* e-image-chooser.c: (e_image_chooser_init), (set_image_from_data),
+	(image_drag_motion_cb), (image_drag_drop_cb): fix scaling the image
+	on the user photo button (bug #309629)
+
 2008-04-25  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-about-me.c: (about_me_load_photo), (about_me_setup_dialog):
